@@ -1,6 +1,6 @@
-Date: 2022-04-16
+Date: 2022-05-06
 Package: CHNOSZ
-Version: 1.9.9-16
+Version: 1.9.9-17
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
