@@ -51,3 +51,13 @@ don't have to compile anything to install CHNOSZ updates).
 - Add units = c(T.units, P.units, E.units) to output of subcrt()
 
 - Add units = c(T.units, P.units) to output of affinity()
+
+[20220422]
+
+- Re-enter data from PS01 and AP01 (original units in J not cal)
+
+- subcrt(): Don't output properties in HKF region 4
+
+[20220503]
+
+- Don't use palply in read.fasta()
